spring-data-jpa/src/main/java/ru/sabitov/example/error/BookEventDeserializationException.java
package ru.sabitov.example.error;

public class BookEventDeserializationException extends RuntimeException {
    public BookEventDeserializationException(String message) {
        super(message);
    }
}
